--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
+    <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
+    </head>
     <title>CliniClass</title>
 </head>
 <body>
@@ -56,8 +58,8 @@
             </div>
         </div>
         <div class="tab-content flex-fill" id="v-pills-tabContent" style="margin-top: 9vh;">
-            <div class="tab-pane fade show active mt-3 px-3" id="v-pills-home" role="tabpanel" aria-labelledby="v-pills-home-tab" tabindex="0">
-                <h1 class="">Dashboard</h1>
+            <div class="tab-pane fade show active mt-3 px-4" id="v-pills-home" role="tabpanel" aria-labelledby="v-pills-home-tab" tabindex="0">
+                <h1>Dashboard</h1>
                 <nav aria-label="breadcrumb">
                     <ol class="breadcrumb">
                         <li class="breadcrumb-item"><a href="#">Dashboard</a></li>
@@ -126,59 +128,50 @@
                             <div class="card mb-4" style="height: 465px;">
                                 <div class="card-header">
                                     <i class="fas fa-chart-area me-1"></i>
-                                    Recent Diagnosis
+                                    Recent Consultation
                                 </div>
                                 <div class="card-body overflow-auto p-1" id="style-2">
                                     <div class="col-12">
                                         <div class="card text-white bg-primary mb-1">
-                                            <div class="card-header">Header</div>
+                                            <div class="card-header">Visit</div>
                                             <div class="card-body">
-                                              <h4 class="card-title">Primary card title</h4>
+                                              <h4 class="card-title">John Paul Baldonado</h4>
                                               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                                             </div>
                                         </div>
                                     </div>
                                     <div class="col-12">
                                         <div class="card text-white bg-success mb-1">
-                                            <div class="card-header">Header</div>
+                                            <div class="card-header">Recovered</div>
                                             <div class="card-body">
-                                              <h4 class="card-title">Primary card title</h4>
+                                              <h4 class="card-title">Mang Juan</h4>
                                               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                                             </div>
                                         </div>
                                     </div>
                                     <div class="col-12">
                                         <div class="card text-white bg-warning mb-1">
-                                            <div class="card-header">Header</div>
+                                            <div class="card-header">Currenly Admitted</div>
                                             <div class="card-body">
-                                              <h4 class="card-title">Primary card title</h4>
+                                              <h4 class="card-title">Maria Victoria</h4>
                                               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                                             </div>
                                         </div>
                                     </div>
                                     <div class="col-12">
                                         <div class="card text-white bg-primary mb-1">
-                                            <div class="card-header">Header</div>
+                                            <div class="card-header">Visit</div>
                                             <div class="card-body">
-                                              <h4 class="card-title">Primary card title</h4>
-                                              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="col-12">
-                                        <div class="card text-white bg-info mb-1">
-                                            <div class="card-header">Header</div>
-                                            <div class="card-body">
-                                              <h4 class="card-title">Primary card title</h4>
+                                              <h4 class="card-title">Nick Jonas</h4>
                                               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                                             </div>
                                         </div>
                                     </div>
                                     <div class="col-12">
                                         <div class="card text-white bg-danger mb-1">
-                                            <div class="card-header">Header</div>
+                                            <div class="card-header">Emergency</div>
                                             <div class="card-body">
-                                              <h4 class="card-title">Primary card title</h4>
+                                              <h4 class="card-title">Paul Mark Jr.</h4>
                                               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                                             </div>
                                         </div>
@@ -189,7 +182,116 @@
                     </div>
                 </nav>
             </div>
-            <div class="tab-pane fade" id="v-pills-profile" role="tabpanel" aria-labelledby="v-pills-profile-tab" tabindex="0">Two</div>
+            <div class="tab-pane fade mt-4 px-4" id="v-pills-profile" role="tabpanel" aria-labelledby="v-pills-profile-tab" tabindex="0">
+                <div class="d-flex mb-3">
+                    <div class="card" style="width: 18rem;">
+                        <img src="image/student1.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Maria Victoria</h5>
+                            <p class="card-text">4th Year - BSIT</p>
+                            <div class="input-group me-4">
+                                <input type="text" class="form-control" placeholder="Search id/name" aria-label="Search for..." aria-describedby="button-addon2">
+                                <button class="btn btn-primary" type="button" id="button-addon2"><i class="bi bi-search"></i></button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row d-flex align-self-start align-items-start ms-2 flex-fill p-0">
+                        <div class="col-4">
+                            <div class="card bg-primary text-white mb-4">
+                                <div class="card-body"> 5 Total Visits</div>
+                                <div class="card-footer d-flex align-items-center justify-content-between">
+                                    <a class="small text-white stretched-link" href="#">View Details</a>
+                                    <div class="small text-white"><i class="fas fa-angle-right"></i></div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-4">
+                            <div class="card bg-warning text-white mb-4">
+                                <div class="card-body"> 1 Total Admits</div>
+                                <div class="card-footer d-flex align-items-center justify-content-between">
+                                    <a class="small text-white stretched-link" href="#">View Details</a>
+                                    <div class="small text-white"><i class="fas fa-angle-right"></i></div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-4">
+                            <div class="card bg-danger text-white mb-4">
+                                <div class="card-body"> 0 Emergency</div>
+                                <div class="card-footer d-flex align-items-center justify-content-between">
+                                    <a class="small text-white stretched-link" href="#">View Details</a>
+                                    <div class="small text-white"><i class="fas fa-angle-right"></i></div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-12">
+                            <div class="card mb-0">
+                                <div class="card-header">
+                                    <i class="fas fa-chart-area me-1"></i>
+                                    Student Profile
+                                </div>
+                                <div class="card-body" style="min-height: 270px;"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12">
+                        <div class="card mb-4" style="height: 465px;">
+                            <div class="card-header">
+                                <i class="fas fa-chart-area me-1"></i>
+                                Recent Consultation
+                            </div>
+                            <div class="card-body overflow-auto p-1" id="style-2">
+                                <div class="col-12">
+                                    <div class="card text-white bg-primary mb-1">
+                                        <div class="card-header">Visit</div>
+                                        <div class="card-body">
+                                          <h4 class="card-title">Headache</h4>
+                                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-12">
+                                    <div class="card text-white bg-primary mb-1">
+                                        <div class="card-header">Visit</div>
+                                        <div class="card-body">
+                                          <h4 class="card-title">Runny Nose</h4>
+                                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-12">
+                                    <div class="card text-white bg-warning mb-1">
+                                        <div class="card-header">Admitted</div>
+                                        <div class="card-body">
+                                          <h4 class="card-title">Sick</h4>
+                                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-12">
+                                    <div class="card text-white bg-primary mb-1">
+                                        <div class="card-header">Visit</div>
+                                        <div class="card-body">
+                                          <h4 class="card-title">Headache</h4>
+                                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-12">
+                                    <div class="card text-white bg-primary mb-1">
+                                        <div class="card-header">Visit</div>
+                                        <div class="card-body">
+                                          <h4 class="card-title">Wounds</h4>
+                                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
             <div class="tab-pane fade" id="v-pills-messages" role="tabpanel" aria-labelledby="v-pills-messages-tab" tabindex="0">Three</div>
             <div class="tab-pane fade" id="v-pills-settings" role="tabpanel" aria-labelledby="v-pills-settings-tab" tabindex="0">Four</div>
         </div>
